--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -1,10 +1,10 @@
 .about {
   padding-top: 70px;
   padding-bottom: 130px;
-
   position: relative;
   top: -5px;
   background-image: url("../public/img/common_bg_light.jpg");
+  background-size: cover;
 }
 
 .about__container {
