--- a/scss/blocks/tokenomics.scss
+++ b/scss/blocks/tokenomics.scss
@@ -1,4 +1,135 @@
 .tokenomics {
   padding-top: 110px;
   padding-bottom: 140px;
+  background-image: url("../public/img/common_bg_dark.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.tokenomics__container {
+  width: min(1270px, 100%);
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+}
+
+.tokenomics__title {
+  margin-bottom: 63px;
+  font-size: 60px;
+  line-height: 105%;
+}
+
+.tokenomics__statistics {
+  margin-bottom: 128px;
+  display: flex;
+  gap: 8px;
+}
+
+.presale,
+.team,
+.marketing,
+.liquidity {
+  width: 25%;
+  padding: 25px 30px;
+  min-height: 208px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.065);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  h3 {
+    font-size: 26px;
+    line-height: 105%;
+  }
+
+  span {
+    font-size: 60px;
+    line-height: 105%;
+  }
+}
+
+.tokenomics__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tokenomics__code {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  .code__key {
+    position: relative;
+    #key {
+      font-weight: 400;
+      font-size: 26px;
+      line-height: 105%;
+      letter-spacing: 0.03em;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      translate: 0 -50%;
+    }
+
+    .code__bg {
+      mix-blend-mode: soft-light;
+    }
+  }
+
+  .code__copy {
+    position: relative;
+    #copy {
+      font-size: 22px;
+      line-height: 105%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      translate: -50% -50%;
+    }
+    .code__bg {
+      mix-blend-mode: overlay;
+    }
+  }
+}
+
+.tokenomics__total {
+  display: flex;
+  flex-direction: column;
+
+  .total__text {
+    font-size: 36px;
+    line-height: 105%;
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .total__num {
+    font-size: 44px;
+    line-height: 105%;
+    position: relative;
+
+    &::before {
+      content: url("../public/img/tokenomics/total_bg.png");
+      position: absolute;
+      top: 0;
+      left: 0;
+      translate: -10% -25%;
+      width: 100%;
+      height: 100%;
+      mix-blend-mode: soft-light;
+    }
+
+    &::after {
+      content: url("../public/img/tokenomics/total_mark.png");
+      position: absolute;
+      top: 0;
+      right: 0;
+      translate: 105% -25%;
+      width: 100%;
+      height: 100%;
+      mix-blend-mode: hard-light;
+      z-index: 1;
+    }
+  }
 }
