--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -30,6 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 24px;
   position: fixed;
