--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -5,12 +5,24 @@
   top: -5px;
   background-image: url("../public/img/common_bg_light.jpg");
   background-size: cover;
+  overflow: hidden;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 30px;
+    padding-bottom: 50px;
+  }
 }
 
 .about__container {
-  width: min(1270px, 100%);
+  width: min(1310px, 100%);
   margin-left: auto;
   margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media screen and (max-width: 540px) {
+    padding-right: 0;
+  }
 }
 
 .about__title {
@@ -19,17 +31,35 @@
   line-height: 105%;
   text-transform: uppercase;
   text-align: center;
+
+  @media screen and (max-width: 768px) {
+    margin-bottom: 51px;
+    font-size: 42px;
+  }
+  @media screen and (max-width: 540px) {
+    margin-right: 20px;
+  }
 }
 
 .about__person {
   display: flex;
   font-family: var(--second-family);
+  @media screen and (max-width: 1340px) {
+    flex-direction: column;
+  }
+  @media screen and (max-width: 540px) {
+    padding-right: 20px;
+  }
 
   .person__name {
     margin-bottom: 7px;
     font-weight: 700;
     font-size: 34px;
     line-height: 145%;
+
+    @media screen and (max-width: 768px) {
+      font-size: 22px;
+    }
   }
 
   .person__text {
@@ -38,12 +68,20 @@
     display: block;
     font-size: 22px;
     line-height: 145%;
+
+    @media screen and (max-width: 768px) {
+      font-size: 15px;
+    }
   }
 
   .person__age {
     font-family: var(--font-family);
     font-size: 26px;
     text-transform: uppercase;
+
+    @media screen and (max-width: 768px) {
+      font-size: 20px;
+    }
   }
 }
 .about__person.hidden {
@@ -58,9 +96,23 @@
   display: flex;
   gap: 40px;
 
+  @media screen and (max-width: 540px) {
+    overflow: scroll;
+    &::-webkit-scrollbar {
+      width: 0;
+    }
+  }
+
+  @media screen and (max-width: 1340px) {
+    margin-top: 20px;
+  }
   button {
     position: relative;
     border-radius: 50%;
+
+    @media screen and (max-width: 540px) {
+      flex-shrink: 0;
+    }
 
     &:after {
       content: "";
@@ -89,6 +141,11 @@
 .person__right {
   position: relative;
   border-radius: 50%;
+
+  @media screen and (max-width: 540px) {
+    display: none;
+  }
+
   &:after {
     content: "";
     width: 100%;
