--- a/scss/blocks/buy.scss
+++ b/scss/blocks/buy.scss
@@ -1,15 +1,29 @@
 .buy {
   padding-bottom: 210px;
   position: relative;
+  top: -7px;
+  overflow: hidden;
   background-image: url("../public/img/common_bg_dark.png");
   background-size: cover;
   background-position: center;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 10px;
+  }
 }
 
 .buy__container {
-  width: min(1270px, 100%);
+  width: min(1350px, 100%);
   margin-left: auto;
   margin-right: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  @media screen and (max-width: 768px) {
+    padding-left: 35px;
+    padding-right: 20px;
+  }
 }
 
 .buy__title {
@@ -17,10 +31,20 @@
   font-size: 60px;
   line-height: 105%;
   text-transform: uppercase;
+
+  @media screen and (max-width: 768px) {
+    padding: 0;
+    font-size: 42px;
+    text-align: center;
+  }
 }
 
 .buy__wrap {
   display: flex;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .buy__subtitle {
@@ -28,6 +52,10 @@
   font-size: 24px;
   line-height: 105%;
   text-transform: uppercase;
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .buy__steps {
@@ -36,6 +64,13 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+
+  @media screen and (max-width: 768px) {
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 30px;
+  }
 }
 
 .step__text {
@@ -44,6 +79,10 @@
   line-height: 105%;
   text-transform: uppercase;
   position: relative;
+
+  @media screen and (max-width: 768px) {
+    font-size: 22px;
+  }
 }
 
 .step__accent {
@@ -51,6 +90,10 @@
   line-height: 105%;
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.6);
+
+  @media screen and (max-width: 768px) {
+    font-size: 16px;
+  }
 }
 
 .step__link {
@@ -59,6 +102,10 @@
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.9);
   z-index: 1;
+
+  @media screen and (max-width: 768px) {
+    font-size: 16px;
+  }
 
   img {
     mix-blend-mode: overlay;
@@ -79,5 +126,9 @@
   .buy__img {
     position: absolute;
     top: 0;
+
+    @media screen and (max-width: 768px) {
+      position: static;
+    }
   }
 }
