--- a/scss/blocks/roadmap.scss
+++ b/scss/blocks/roadmap.scss
@@ -6,12 +6,19 @@
   background-image: url("../public/img/common_bg_light.jpg");
   background-size: cover;
   background-position: center;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 50px;
+  }
 }
 
 .roadmap__container {
-  width: min(1270px, 100%);
+  width: min(1310px, 100%);
   margin-left: auto;
   margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .roadmap__title {
@@ -19,6 +26,11 @@
   font-size: 60px;
   line-height: 105%;
   text-transform: uppercase;
+
+  @media screen and (max-width: 768px) {
+    margin-bottom: 30px;
+    font-size: 42px;
+  }
 }
 
 .roadmap__schedule {
@@ -32,9 +44,22 @@
   border-radius: 30px;
   background: rgba(255, 255, 255, 0.05);
 
+  @media screen and (max-width: 768px) {
+    padding: 25px 30px;
+    border-radius: 20px;
+  }
+  @media screen and (max-width: 375px) {
+    padding: 14px 20px;
+  }
+
   div {
     display: flex;
     gap: 60px;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      gap: 24px;
+    }
 
     span {
       padding-left: 30px;
@@ -43,14 +68,25 @@
       line-height: 105%;
       position: relative;
       z-index: 1;
+
+      @media screen and (max-width: 768px) {
+        font-size: 16px;
+      }
+
       &::before {
         content: url("../public/img/roadmap/roadmap_mark.png");
         position: absolute;
-        top: -25%;
+        top: -50%;
         left: 0;
         z-index: -1;
+        translate: 0 0;
+
+        @media screen and (max-width: 768px) {
+          scale: 0.73;
+        }
       }
     }
+
     span.not-done {
       &::before {
         content: url("../public/img/roadmap/roadmap_mark.png");
@@ -65,4 +101,9 @@
   font-size: 42px;
   line-height: 105%;
   text-transform: uppercase;
+
+  @media screen and (max-width: 768px) {
+    margin-bottom: 25px;
+    font-size: 32px;
+  }
 }
