--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -114,6 +114,7 @@
     align-items: center;
     border: 1px solid transparent;
     transition: background-color 250ms ease, border-color 200ms ease;
+    overflow: hidden;
 
     @media screen and (max-width: 768px) {
       border-radius: 10px;
