--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -22,6 +22,8 @@
 
   @media screen and (max-width: 540px) {
     padding-right: 0;
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
@@ -37,7 +39,10 @@
     font-size: 42px;
   }
   @media screen and (max-width: 540px) {
-    margin-right: 20px;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    translate: -50% 0;
   }
 }
 
@@ -96,16 +101,20 @@
   display: flex;
   gap: 40px;
 
+  @media screen and (max-width: 1340px) {
+    margin-top: 20px;
+  }
+
   @media screen and (max-width: 540px) {
+    margin-top: 0;
+    margin-bottom: 42px;
+    padding-top: 95px;
     overflow: scroll;
     &::-webkit-scrollbar {
       width: 0;
     }
   }
 
-  @media screen and (max-width: 1340px) {
-    margin-top: 20px;
-  }
   button {
     position: relative;
     border-radius: 50%;
@@ -121,7 +130,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      border: 6px solid #ccc;
+      border: 5px solid #6f6f6f;
       border-radius: 50%;
       background-color: transparent;
     }
@@ -133,7 +142,7 @@
 
   button.active {
     &:after {
-      border: 6px solid #d8b696;
+      border: 5px solid #d8b696;
     }
   }
 }
