--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,7 @@ body {
 }
 @media screen and (max-width: 768px) {
   .home__socials {
-    right: 26px;
+    right: 20px;
     top: auto;
     bottom: 30px;
     flex-direction: row;
@@ -434,7 +434,7 @@ body {
 }
 @media screen and (max-width: 768px) {
   .home__btn {
-    width: 340px;
+    width: calc(100% - 40px);
     height: 58px;
     bottom: 94px;
     font-size: 26px;
@@ -508,7 +508,7 @@ body {
   .home__buy {
     display: flex;
     bottom: 26px;
-    left: 21px;
+    left: 20px;
   }
 }
 
